[new] Implemented basic markup for mobile devices

--- a/dev/styles/index.less
+++ b/dev/styles/index.less
@@ -1,3 +1,29 @@
+// include fonts used on the page
+@import url('fonts/proximanova-regular.less');
+@import url('fonts/proximanova-bold.less');
+
+// include normalize.css before any other styles
 @import (less) url('../../node_modules/normalize.css/normalize.css');
+
+// include page specific styles
+@import url('clearfix/clearfix.less');
 @import url('page/page.less');
+@import url('header/header.less');
+@import url('burger/burger.less');
+@import url('logo/logo.less');
 @import url('menu/menu.less');
+@import url('title/title.less');
+@import url('text/text.less');
+@import url('text-gradient/text-gradient.less');
+@import url('button/button.less');
+@import url('tagline/tagline.less');
+@import url('about/about.less');
+@import url('principle/principle.less');
+@import url('drones/drones.less');
+@import url('advantages-list/advantages-list.less');
+@import url('products/products.less');
+@import url('product/product.less');
+@import url('flex-container/flex-container.less');
+@import url('contact/contact.less');
+@import url('input/input.less');
+@import url('contact-form/contact-form.less');
