--- a/dev/styles/menu/menu.less
+++ b/dev/styles/menu/menu.less
@@ -1,8 +1,29 @@
 .menu {
-    margin: 0;
-    padding: 0;
+    width: 100%;
+    max-height: 0px;
+    overflow: hidden;
+    transition: all .4s ease;
 
     &__items {
-        list-style-type: none;
+        margin: 0;
+        padding: 0;
+        list-style: none;
+    }
+
+    &__item {
+        border-top: 1px solid rgba(120, 120, 120, 0.2);
+    }
+
+    &__link {
+        display: block;
+        padding: 0.5rem 0.625rem;
+        text-decoration: none;
+        color: @base-text-color;
+        transition: all .2s ease;
+
+        &:hover {
+            color: @base-white-color;
+            transform: translateX(8px);
+        }
     }
 }
