--- a/dev/styles/page/page.less
+++ b/dev/styles/page/page.less
@@ -4,6 +4,7 @@
     
     background-color: @base-white-color;
     font-family: @base-font-family;
+    font-size: 100%;
     color: @base-text-color;
 
     &__about {
