--- a/dev/styles/title/title.less
+++ b/dev/styles/title/title.less
@@ -1,11 +1,18 @@
 .title {
-    @font-size: 3rem;
-    @font-size-mobile: 0.55 * @font-size;
-    @line-height: 2rem;
-    @line-height-mobile: 0.75 * @line-height;
-
-    font-size: @font-size-mobile;
-    line-height: @line-height-mobile;
+    font-size: 1.65em;
+    line-height: 1.5;
     font-weight: bold;
     color: @base-white-color;
+
+    @media screen and (min-width: 768px) {
+        font-size: 2em;
+    }
+
+    @media screen and (min-width: 1024px) {
+        font-size: 2.5em;
+    }
+
+    @media screen and (min-width: 1400px) {
+        font-size: 3em;
+    }
 }
