--- a/dev/styles/button/button.less
+++ b/dev/styles/button/button.less
@@ -1,34 +1,50 @@
 .button {
-    @font-size: 1.125rem;
-    @font-size-mobile: 0.85 * @font-size;
-    @line-height: 2rem;
-    @line-height-mobile: 0.75 * @line-height;
-
     position: relative;
     display: inline-block;
     outline: none;
-    font-size: @font-size-mobile;
-    line-height: @line-height-mobile;
+    font-size: 0.875em;
+    line-height: 1.75;
     color: @base-white-color;
     text-decoration: none;
-    padding: 0.5rem 2rem;
+    padding: 0.5em 2em;
     border: 1px solid transparent;
-    border-radius: 1.25rem;
+    border-radius: 1.5em;
     cursor: pointer;
 
-    &_role_play-source::before {
-        content: '';
-        position: absolute;
-        display: block;
-        top: 0.7rem;
-        left: 0.5rem;
-        width: 0;
-        height: 0;
-        border: 0.5rem solid @base-white-color;
-        border-left-width: 1rem;
-        border-right-width: 0;
-        border-top-color: transparent;
-        border-bottom-color: transparent;
+    @media screen and (min-width: 1024px) {
+        font-size: 1.125em;
+        line-height: 2;
+        padding: 0.35em 2.9em;
+        border-radius: 2em;
+    }
+
+    &_role_play-source {
+        
+        padding: 0.5em 2em 0.5em 3em;
+
+        @media screen and (min-width: 1024px) {
+            padding: 0.35em 2em 0.35em 3.45em;
+        }
+
+        &::before {
+            content: '';
+            position: absolute;
+            display: block;
+            top: 0.8em;
+            left: 1.25em;
+            width: 0;
+            height: 0;
+            border: 0.5em solid @base-white-color;
+            border-left-width: 0.7778em;
+            border-right-width: 0;
+            border-top-color: transparent;
+            border-bottom-color: transparent;
+    
+            @media screen and (min-width: 1024px) {
+                top: 0.9em;
+                left: 1.55em;
+            }
+        }
     }
 
     &_theme_transparent {
