--- a/dev/styles/menu/menu.less
+++ b/dev/styles/menu/menu.less
@@ -1,6 +1,4 @@
 .menu {
-    width: 100%;
-    max-height: 0px;
     overflow: hidden;
     transition: all .4s ease;
 
@@ -8,22 +6,52 @@
         margin: 0;
         padding: 0;
         list-style: none;
+
+        @media screen and (min-width: 768px) {
+            display: flex;
+            flex-wrap: nowrap;
+        }
     }
 
     &__item {
         border-top: 1px solid rgba(120, 120, 120, 0.2);
+        
+        @media screen and (min-width: 768px) {
+            border-top: none;
+        }
     }
 
     &__link {
         display: block;
-        padding: 0.5rem 0.625rem;
+        padding: 0.5em 0.75em;
         text-decoration: none;
         color: @base-text-color;
         transition: all .2s ease;
+        border: 1px solid transparent;
+        border-radius: 1em;
+        line-height: 1.5;
+
+        @media screen and (min-width: 768px) {
+            color: @base-white-color;
+            font-size: 0.75em;
+        }
+
+        @media screen and (min-width: 1024px) {
+            font-size: 1em;
+        }
+
+        @media screen and (min-width: 1400px) {
+            font-size: 1.125em;
+        }
 
         &:hover {
             color: @base-white-color;
             transform: translateX(8px);
+
+            @media screen and (min-width: 768px) {
+                transform: none;
+                border-color: rgba(255, 255, 255, 0.3);
+            }
         }
     }
 }
