--- a/dev/styles/tagline/tagline.less
+++ b/dev/styles/tagline/tagline.less
@@ -1,6 +1,11 @@
 .tagline {
     &__title {
         margin: 0 0 0.75rem;
+        line-height: 0.75;
+
+        @media screen and (min-width: 768px) {
+            margin-bottom: 1.125rem;
+        }
     }
 
     &__text {
@@ -11,5 +16,17 @@
 
     &__buttons-container {
         margin: 0.75rem 0 0;
+
+        @media screen and (min-width: 768px) {
+            margin-top: 1.5rem;
+        }
+
+        @media screen and (min-width: 1024px) {
+            margin-top: 2.5rem;
+        }
+
+        @media screen and (min-width: 1400px) {
+            margin-top: 3.75rem;
+        }
     }
 }
