--- a/dev/styles/principle/principle.less
+++ b/dev/styles/principle/principle.less
@@ -11,24 +11,44 @@
             background-position:0 -98px;
             width: 103px;
             height: 57px;
+
+            @media screen and (min-width: 480px) {
+                margin-top: 21.5px;
+                margin-bottom: 21.5px;
+            }
         }
 
         &_best-drones {
             background-position: 0 0;
             width: 97px;
             height: 98px;
+
+            @media screen and (min-width: 480px) {
+                margin-top: 1px;
+                margin-bottom: 1px;
+            }
         }
 
         &_speed {
             background-position:0 -250px;
             width: 84px;
             height: 84px;
+            
+            @media screen and (min-width: 480px) {
+                margin-top: 8px;
+                margin-bottom: 8px;
+            }
         }
 
         &_long-range {
             background-position:0 -155px;
             width: 71px;
             height: 95px;
+            
+            @media screen and (min-width: 480px) {
+                margin-top: 2.5px;
+                margin-bottom: 2.5px;
+            }
         }
     }
 
