--- a/dev/styles/advantages-list/advantages-list.less
+++ b/dev/styles/advantages-list/advantages-list.less
@@ -4,24 +4,23 @@
     list-style: none;
 
     &__item {
-        @font-size: 0.875rem;
-        @font-size-mobile: @font-size;
-        @line-height: 1.5rem;
-        @line-height-mobile: 0.75 * @line-height;
-
         counter-increment: list-item;
         position: relative;
         padding-left: 3.5rem;
-
-        font-size: @font-size-mobile;
-        line-height: @line-height-mobile;
         vertical-align: middle;
 
         color: #a7acbc;
+
+        font-size: 0.875em;
+        line-height: 1.3;
+
+        @media screen and (min-width: 768px) {
+            line-height: 1.75;
+        }
     }
 
     &__item::before {
-        @radius: 2rem;
+        @radius: 2em;
 
         content: counter(list-item);
         position: absolute;
@@ -37,7 +36,7 @@
         box-sizing: border-box;
         border-radius: 50%;
 
-        font-size: 1rem;
+        font-size: 1em;
         color: #3f4e76;
         text-align: center;
         vertical-align: middle;
