--- a/dev/styles/contact-form/contact-form.less
+++ b/dev/styles/contact-form/contact-form.less
@@ -2,7 +2,9 @@
     @input-border-color: rgba(255, 255, 255, 0.15);
     @input-focus-border-color: rgba(255, 255, 255, 0.3);
     @button-border-color: rgba(255, 255, 255, 0.3);
-    @border-radius: 1.25rem;
+    @button-focus-border-color: rgba(255, 255, 255, 0.5);
+    @border-radius: 1.25em;
+    @border-radius-big: 2em;
 
     display: flex;
     flex-wrap: nowrap;
@@ -14,6 +16,10 @@
         flex-wrap: nowrap;
         overflow: hidden;
         border-radius: @border-radius;
+
+        @media screen and (min-width: 1024px) {
+            border-radius: @border-radius-big;
+        }
     }
 
     &__email {
@@ -22,18 +28,30 @@
         border-radius: @border-radius;
         outline: none;
         background-color: transparent;
-        padding-right: 1.5rem;
+        padding-right: 1.5em;
         border-right: none;
         border-top-right-radius: 0;
         border-bottom-right-radius: 0;
+        transition: border-color .2s ease;
 
         &:focus {
             border-color: @input-focus-border-color;
+
+            & + .contact-form__button {
+                border-color: @button-focus-border-color;
+            }
+        }
+
+        @media screen and (min-width: 1024px) {
+            border-top-left-radius: @border-radius-big;
+            border-bottom-left-radius: @border-radius-big;
+            padding-right: @border-radius-big;
         }
     }
 
     &__button {
-        margin-left: -1.25rem;
+        margin-left: -1.25em;
+
         border-color: @button-border-color;
         box-shadow: 0 0 0 9999px  rgba(255, 255, 255, 0.15);
     }
