--- a/dev/styles/contact/contact.less
+++ b/dev/styles/contact/contact.less
@@ -1,7 +1,44 @@
 .contact {
-    background-image: linear-gradient(51deg, rgb(203,0,53) 0%, rgb(224,105,0) 100%);
+    position: relative;
+
+    &::before {
+        content: '';
+        display: block;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        z-index: -1;
+        background-image: linear-gradient(51deg, rgb(203,0,53) 0%, rgb(224,105,0) 100%);
+
+        @media screen and (min-width: 1024px) {
+            opacity: 0.75;
+            filter: saturate(170%);
+        }
+    }
+
+    &::after {
+        content: '';
+        display: none;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        z-index: -2;
+        background-image: url('contact-us-bg.png');
+        background-repeat: no-repeat;
+        background-position: center center;
+        background-size: cover;
+
+        @media screen and (min-width: 1024px) {
+            display: block;
+        }
+    }
 
     &__title {
-        margin: 0 0 0.75rem;
+        line-height: 1;
+        margin: 0 0 1em;
     }
 }
