--- a/dev/styles/drones/drones.less
+++ b/dev/styles/drones/drones.less
@@ -1,7 +1,22 @@
 .drones {
     &__title {
         margin: 0 0 0.75rem;
+        line-height: .75;
         text-align: center;
+
+        @media screen and (min-width: 768px) {
+            text-align: left;
+        }
+    }
+
+    &__content {
+        @media screen and (min-width: 1024px) {
+            max-width: 60%;
+        }
+
+        @media screen and (min-width: 1500px) {
+            max-width: 950px;
+        }
     }
 
     &__description {
@@ -12,8 +27,18 @@
         margin: 1rem 0 0;
         padding: 0;
 
-        & > .advantages-list__item:not(:last-child) {
-            margin-bottom: 1rem;
+        @media screen and (min-width: 768px) {
+            columns: 2;
+            column-gap: 2rem;
+        }
+
+        & > .advantages-list__item {
+            page-break-inside: avoid;
+            break-inside: avoid;
+
+            &:not(:last-child) {
+                margin-bottom: 1rem;
+            }
         }
     }
 }
