--- a/dev/styles/input/input.less
+++ b/dev/styles/input/input.less
@@ -1,16 +1,16 @@
 .input {
-    @font-size: 1.125rem;
-    @font-size-mobile: 0.85 * @font-size;
-    @line-height: 2rem;
-    @line-height-mobile: 0.75 * @line-height;
-
     display: inline-block;
-    font-size: @font-size-mobile;
-    line-height: @line-height-mobile;
+    font-size: 0.875em;
+    line-height: 1.75;
     color: @base-white-color;
-    padding: 0.5rem 1rem;
+    padding: 0.5em 1em;
 
     &::placeholder {
         color: @base-white-color;
+    }
+
+    @media screen and (min-width: 1024px) {
+        font-size: 1.125em;
+        line-height: 2;
     }
 }
