--- a/dev/styles/product/product.less
+++ b/dev/styles/product/product.less
@@ -1,34 +1,39 @@
 .product {
-    @margin: 0 0 0.75rem;
-
     &__article {
-        margin: @margin;
+        box-sizing: border-box;
+        margin-bottom: 0.5rem;
         text-align: center;
     }
 
+    &__article-container {
+        box-sizing: border-box;
+        padding: 1rem 0.5rem;
+    }
+
     &__title {
-        margin: @margin;
+        line-height: 1;
+        margin: 0 0 1em;
     }
 
     &__description {
-        margin: @margin;
+        margin: 0 0 1.5em;
         text-align: left;
     }
 
     &__video-container {
         position: relative;
-        display: inline-block;
+        line-height: 0;
     }
 
     &__video-play-button {
         display: block;
-
         position: absolute;
         top: 0;
         left: 0;
 
         width: 100%;
         height: 100%;
+        box-sizing: border-box;
 
         z-index: 1;
         cursor: pointer;
@@ -82,7 +87,64 @@
     }
 
     &__video {
-        max-width: 100%;
-        height: auto;
+        width: 100%;
+        height: 100%;
+    }
+
+    &_layout {
+        &_flexbox {
+            display: flex;
+            align-items: stretch;
+            flex-direction: column;
+
+            & .product__article-container {
+                align-self: center;
+            }
+
+            @media screen and (min-width: 768px) {
+                flex-direction: row;
+
+                .product__article-container {
+                    width: 50%;
+                    margin-bottom: 0;
+                    padding: 1em;
+                }
+
+                .product__article {
+                    text-align: left;
+                    margin-left: auto;
+                    margin-bottom: 0;
+                    max-width: 35em;
+                }
+
+                .product__video-container {
+                    width: 50%;
+                }
+            }
+
+            @media screen and (min-width: 1200px) {
+                .product__article-container {
+                    padding: 1em 4.75em 1em 2em;
+                }
+            }
+        }
+    }
+
+    &_items-arrangement {
+        &_reverse {
+            @media screen and (min-width: 768px) {
+                flex-direction: row-reverse;
+
+                .product__article {
+                    margin-left: 0;
+                }
+            }
+
+            @media screen and (min-width: 1200px) {
+                .product__article-container {
+                    padding: 1em 2em 1em 4.75em;
+                }
+            }
+        }
     }
 }
