--- a/dev/blocks/header/header.less
+++ b/dev/blocks/header/header.less
@@ -31,23 +31,6 @@
         }
     }
 
-    &__image-container {
-        display: none;
-
-        @media screen and (min-width: 1024px) {
-            display: block;
-            position: relative;
-            content: url('header-bg.png');
-            width: 100%;
-            height: auto;
-            margin-top: -140px;
-            margin-left: auto;
-            margin-right: auto;
-            filter: contrast(170%);
-            z-index: -2;
-        }
-    }
-
     &__content {
         max-width: 1340px;
         margin: 0 auto;
@@ -113,7 +96,7 @@
     }
 
     &__tagline {
-        padding: 3.25rem 0.5rem 1rem;
+        padding: 1rem 0.5rem 1rem;
         text-align: center;
 
         @media screen and (min-width: 768px) {
@@ -128,6 +111,21 @@
 
         @media screen and (min-width: 1400px) {
             padding-top: 13.125rem;
+        }
+    }
+
+    &__image {
+        display: none;
+
+        @media screen and (min-width: 1024px) {
+            display: block;
+            position: relative;
+            z-index: -2;
+            margin-top: -10%;
+
+            width: 100%;
+            height: auto;
+            filter: contrast(170%);
         }
     }
 }
